--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -1,6 +1,6 @@
-<<<<<<< HEAD
-main: Nico
-=======
-main:sdsadasd pippo ecciao
->>>>>>> branch 'main' of https://github.com/Divimey/Plugi-1-MC
-Nico andrea
+name: Towny
+main: it.TownyGDR.TownyGDR
+version: 1.0
+author: Elsalamander
+depends: []
+api-version: 1.16
