--- a/src/Commenti.yml
+++ b/src/Commenti.yml
@@ -1,2 +1,2 @@
-#Commentate quello che vi pare per come sta andando il plugin.
+ciao#Commentate quello che vi pare per come sta andando il plugin.
 #
