--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -4,3 +4,10 @@ version: 1.0
 author: Elsalamander
 depends: []
 api-version: 1.16
+depend: [Library, Vault]
+commands:
+   Zona:
+      usage: /<command>
+     
+   City:
+      usage: /<command>
